// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stand dev stand renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 600;
  word-break: normal;
  color: #902D3FFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  background-color: #FCDBE1FF;
  color: #FFFFFFFF;
  background-color: #FCDBE1FF;
  padding: 0 4px;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-stand"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    DEV
  </span>
</span>
`;

exports[`Stand prod stand renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 600;
  word-break: normal;
  color: #005C63FF;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  background-color: #B5F5ECFF;
  color: #FFFFFFFF;
  background-color: #B5F5ECFF;
  padding: 0 4px;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-stand"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    PROD
  </span>
</span>
`;

exports[`Stand stage stand renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 600;
  word-break: normal;
  color: #875200FF;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  background-color: #FFF1B8FF;
  color: #FFFFFFFF;
  background-color: #FFF1B8FF;
  padding: 0 4px;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-stand"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    STAGE
  </span>
</span>
`;
